--- a/src/component/GlobalStyles/GlobalStyles.scss
+++ b/src/component/GlobalStyles/GlobalStyles.scss
@@ -11,6 +11,8 @@
     --text-color: #333;
     --white: #fff;
     --primary: #fe2c55;
+    --header-height: 4rem;
+    --account-sidebar-height: 10rem;
 }
 
 * {
