--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,17 +1,61 @@
 .wrapper {
     flex: 1;
-    padding: 0 24px;
     background-color: #f4f4f4;
     overflow-y: auto;
     height: 100vh;
 }
 
 .slider {
+    position: relative;
     width: 100%;
-    height: 90vh;
-    background-color: aqua;
-    background-image: url(../../assets/logo.svg);
-    background-repeat: no-repeat;
-    background-size: contain;
-    object-fit: cover;
+    padding-top: 50%;
+    background-color: black;
+    overflow: hidden;
+    // image-rendering: pixelated;
+    // -ms-interpolation-mode: nearest-neighbor;
+}
+
+.carousel {
+    // @apply flex absolute bottom-10 rounded gap-2 flex-nowrap w-full overflow-hidden;
+    position: absolute;
+    bottom: 10%;
+    left: 0;
+    right: 0;
+    display: flex;
+    justify-content: flex-start;
+    gap: 12px;
+    z-index: 15;
+}
+
+.carousel-item {
+    padding-top: 8%;
+    background-color: transparent;
+    border: 2px solid white;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+}
+
+.slider-container {
+    display: flex;
+    width: 100%;
+}
+
+.slider-button {
+    position: absolute;
+    bottom: 10%;
+    transform: translateY(-75%);
+    background-color: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    z-index: 20;
+}
+
+.prev {
+    left: 10px;
+}
+
+.next {
+    right: 10px;
 }
